fixed vertical alignment issue for cell in table whose column type are action button, multiselect,datepicker

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -10438,3 +10438,13 @@ tbody {
     }
   }
 }
+.table-editor-component-row{
+  .rdt.cell-type-datepicker{
+    margin-top: 0;
+  }
+  .has-multiselect{
+    .select-search-input{
+      margin-bottom: 0;
+    }
+  }
+}
